12-kubernetes-2.3-Конфигурация приложений/task2.yaml
---
apiVersion : apps/v1
kind: Deployment
metadata:
  name: deployment2
  labels:
    app: main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          volumeMounts:
          - mountPath: /usr/share/nginx/html/
            name: volume
          ports:
            - containerPort: 80
              name: http-port
            - containerPort: 443
              name: https-port
          resources:
            requests:
              cpu: "1m"
              memory: "20Mi"
            limits:
              cpu: "10m"
              memory: "20Mi"
      volumes:
      - name: volume
        configMap:
          name: indexname

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressname
spec:
  rules:
  - host: testsite.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: servicename
            port:
              number: 80
  tls:
    - hosts:
      - testsite.com
      secretName: secret-tlsname

---
apiVersion: v1
kind: Service
metadata:
  name: servicename
spec:
  selector:
    app: main
  type: NodePort
  ports:
    - name: web
      port: 80
      nodePort: 30000
      targetPort: 80

---
